--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 reqwest = { version = "0.11.14", features = ["blocking"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
-sha256 = "1.1.2"
 futures-util = "0.3.26"
+ring = "0.16.20"
+data-encoding = "2.3.3"
